HelloUltraviolet/Fixtures/RejectedSource/Permissions/ConstMutation/Expected.uv
//! Expected diagnostic metadata for the ConstMutation rejected-source specimen.

expectedDiagnostic("E-TYP-1601", "diagnostics.PermissionAdmissibility")
